# ardf-tx

RX/: DCRX_proto.kicad_pcb  DCRX_proto.pro  DCRX_proto.sch
TX/: TX.kicad_pcb  TX.pro  TX.sch  tiny.kicad_pcb  tiny.pro  tiny.sch
ant/: vertical.nec
firmware/: CMakeLists.txt  button.h  keyer.c  main.c  temp.c  tx.c
firmware/cmake/: generic-gcc-avr.cmake
firmware/lib/: button.c  button.h  button.hh  clock.c  clock.h  keyer.c  keyer.h  temp.h
firmware/tiny/: CMakeLists.txt  config.h.in  main.c  tx.c  tx.h
firmware/tx/: CMakeLists.txt  tx.c  tx.h
